# smalloc

./: README.md  coverage.sh
include/: headers.hpp
smalloc/: CMakeLists.txt  build.sh  headers.cpp  headers.hpp  main.cpp  manager.hpp  smalloc.hpp
smalloc/include/: smalloc_random.hpp
smalloc/src/: headers.cpp
smalloc/test/: CMakeLists.txt  Makefile  main.cpp  main1.cpp
src/: CMakeLists.txt  smalloc.cpp
test/: main1.cpp  test1  test2
